[EFL] Broken rendering occurs when scrolling in ewk_view_single. https://bugs.webkit.org/show_bug.cgi?id=77325

Reviewed by Gyuyoung Kim.

After r104687, broken rendering occurs when scrolling contents.
It's because scrollWidth can be smaller than width of image buffer.

This patch fixes it and renames parameter to avoid confusion.

* ewk/ewk_view_single.cpp:
(_ewk_view_screen_move):
(_ewk_view_single_scroll_process_single):


Canonical link: https://commits.webkit.org/121728@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@136108 268f45cc-cd09-0410-ab3c-d52691b4dbfc