Source/WebKit/efl/ewk/ewk_view_single.cpp
@@ -101,10 +101,10 @@ static void _ewk_view_single_smart_resize(Evas_Object* ewkView, Evas_Coord width
     }
 }
 
-static inline void _ewk_view_screen_move(uint32_t* image, size_t destinationX, size_t destinationY, size_t sourceX, size_t sourceY, size_t copyWidth, size_t copyHeight, size_t frameWidth)
+static inline void _ewk_view_screen_move(uint32_t* image, size_t destinationX, size_t destinationY, size_t sourceX, size_t sourceY, size_t copyWidth, size_t copyHeight, size_t imageWidth)
 {
-    uint32_t* sourceBegin = image + (frameWidth * sourceY) + sourceX;
-    uint32_t* destinationBegin = image + (frameWidth * destinationY) + destinationX;
+    uint32_t* sourceBegin = image + (imageWidth * sourceY) + sourceX;
+    uint32_t* destinationBegin = image + (imageWidth * destinationY) + destinationX;
 
     size_t copyLength = copyWidth * 4;
     const int moveLineUpDown = sourceY >= destinationY ? 1 : -1;
@@ -113,15 +113,15 @@ static inline void _ewk_view_screen_move(uint32_t* image, size_t destinationX, s
     uint32_t* source, * destination;
     if (sourceX >= destinationX) {
         for (size_t i = 0; i < copyHeight; i++) {
-            source = sourceBegin + (frameWidth * startHeight);
-            destination = destinationBegin + (frameWidth * startHeight);
+            source = sourceBegin + (imageWidth * startHeight);
+            destination = destinationBegin + (imageWidth * startHeight);
             startHeight = startHeight + moveLineUpDown;
             memcpy(destination, source, copyLength);
         }
     } else {
         for (size_t i = 0; i < copyHeight; i++) {
-            source = sourceBegin + (frameWidth * startHeight);
-            destination = destinationBegin + (frameWidth * startHeight);
+            source = sourceBegin + (imageWidth * startHeight);
+            destination = destinationBegin + (imageWidth * startHeight);
             startHeight = startHeight + moveLineUpDown;
             memmove(destination, source, copyLength);
         }
@@ -176,7 +176,7 @@ static inline void _ewk_view_single_scroll_process_single(Ewk_View_Smart_Data* s
     int copyWidth = scrollWidth - abs(scrollRequest->dx);
     int copyHeight = scrollHeight - abs(scrollRequest->dy);
     if (scrollRequest->dx || scrollRequest->dy) {
-        _ewk_view_screen_move(static_cast<uint32_t*>(pixels), destinationX, destinationY, sourceX, sourceY, copyWidth, copyHeight, scrollWidth);
+        _ewk_view_screen_move(static_cast<uint32_t*>(pixels), destinationX, destinationY, sourceX, sourceY, copyWidth, copyHeight, width);
         evas_object_image_data_update_add(smartData->backing_store, destinationX, destinationY, copyWidth, copyHeight);
     }
 
